# CnocrCpp

./: CMakeLists.txt  README.md  cnocr.cpp  cnocr.h  cnstd.cpp  cnstd.h  label_cn.txt  main.cpp  modle.cpp  modle.h
dict/: chinese_cht_dict.txt  en_dict.txt
